[gd_scene load_steps=2 format=3 uid="uid://bhvykig2f3rdi"]

[ext_resource type="Script" path="res://demo.gd" id="1_qxknm"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_qxknm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="InSimVBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="InSimButton" type="Button" parent="VBoxContainer/InSimVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Initialize InSim"

[node name="Spacer" type="Control" parent="VBoxContainer/InSimVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CarLightsButton" type="Button" parent="VBoxContainer/InSimVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Send Random Car Lights"

[node name="CarSwitchesButton" type="Button" parent="VBoxContainer/InSimVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Send Random Car Switches"

[node name="OutSimOutGaugeVBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="OutGaugeLabel" type="Label" parent="VBoxContainer/OutSimOutGaugeVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="OutSimLabel" type="Label" parent="VBoxContainer/OutSimOutGaugeVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
